# jupyter-kernel-mcp

./: .gitignore  README.md  mcp_server.py  pyproject.toml
app/: main.py
app/api/: routes.py  schemas.py
app/domain/: errors.py  models.py
app/infra/: atomic_writer.py  file_lock.py  notebook_repository.py
app/services/: cell_executor.py  image_extractor.py  kernel_session_registry.py  notebook_runtime_service.py  output_serializer.py
cli/: notebook_agent.py
docs/: agent_skill.md  architecture.md
tests/: conftest.py  test_cli_run_cell.py  test_output_persistence.py  test_restart_and_run_until.py  test_session_reuse.py
