[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*", "cli*"]

[tool.setuptools]
py-modules = ["mcp_server"]

[project]
name = "notebook-agent"
version = "0.1.0"
description = "Stateful notebook execution system for AI agents"
requires-python = ">=3.11"
dependencies = [
    "nbformat>=5.9",
    "jupyter_client>=8.0",
    "ipykernel>=6.0",
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "pydantic>=2.0",
    "click>=8.0",
    "mcp>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
]

[project.scripts]
notebook-agent = "cli.notebook_agent:cli"
notebook-agent-mcp = "mcp_server:mcp.run"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
